--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "tier:write": "prettier --write 'src/**/*'"
     },
     "dependencies": {
+        "@heroicons/vue": "^2.0.18",
         "@vueuse/core": "^9.13.0",
         "axios": "^1.3.4",
         "pinia": "^2.0.33",
