--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@vueuse/core": "^9.13.0",
         "axios": "^1.3.4",
         "pinia": "^2.0.33",
+        "tw-elements": "^1.0.0-rc.1",
         "vue": "^3.2.47",
         "vue-router": "^4.1.6"
     },
